emulation: Change soft reset not to switch back to normal screen

This also works around an assertion failure due to incorrect cursor
position, introduced in commit 5a434e6c4457bdfe182a13213396e7a66a08f767.

https://bugzilla.gnome.org/show_bug.cgi?id=741406